src/test/resources/semantic/error/TC_ERROR_STRUCT_NO_DEFINIDO.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 10 | COLUMNA 15 | La estructura 'T' no se encuentra definida. |
struct A{

}

impl A{
    .(){}
    fn m1(B b,T a)->void{

    }
}
struct B{

}

impl B{
    .(){
        
    }
    fn m2(A a)->void{

    }
}

start{

}